Code changes according to alibaba doc
  https://help.aliyun.com/document_detail/139634.html